# pace_reader

./: README.md  environment.yml  pyproject.toml
.ipynb_checkpoints/: example-checkpoint.ipynb
notebooks/: example.ipynb
src/pacereader/: data_loader.py  read_pace.py
src/pacereader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
